# CAD

./: .cursorcad  .gitignore  AUTOMATIC_RELEASE_SUMMARY.md  BUILD_WITHOUT_VS.md  CHANGELOG.md  CI_CD_FIXES.md  CMakeLists.txt  CMake_GTest_Fix.md  Doxyfile  EINFACH_BUILD.txt  FEATURE_IMPLEMENTATION_SUMMARY.md  FINAL_RELEASE_CHECKLIST.md  GITHUB_RELEASE_SETUP.md  GIT_PUSH_READY.md  INSTALL.txt  INSTALL_CMAKE.md  INSTALL_VISUAL_STUDIO.md  MSYS2_SETUP.md  NEXT_STEPS.md  NINJA_INSTALL.txt  QUICK_START.md  README.md  README_INSTALLER.md  RELEASE_COMPLETE.md  RELEASE_READY.md  RELEASE_WORKFLOW.md  TODO.md  WORKFLOW_ERRORS_FIXED.md  WORKFLOW_FIXES.md  build_installer.bat  build_installer.ps1  build_installer_simple.bat  build_simple.ps1  workflow_state.md
backend/: Dockerfile  (+9 more)
src/app/: AppController.cpp  AppController.h  AuthConfig.cpp  AuthConfig.h  CADApplication.cpp  CADApplication.h  CMakeLists.txt  CommunityService.cpp  CommunityService.h  HttpClient.cpp  HttpClient.h  LicenseService.cpp  LicenseService.h  PrinterService.cpp  PrinterService.h  ProjectFileService.cpp  ProjectFileService.h  UpdateChecker.cpp  UpdateChecker.h  UpdateInstaller.cpp  UpdateInstaller.h  UpdateService.cpp  UpdateService.h  UserAuthService.cpp  UserAuthService.h  WorkspaceType.h
src/app/ai/: AIService.cpp  AIService.h  AnthropicProvider.cpp  AnthropicProvider.h  ContextManager.cpp  ContextManager.h  GrokProvider.cpp  GrokProvider.h  ModelProvider.h  OpenAIProvider.cpp  OpenAIProvider.h  PromptBuilder.cpp  PromptBuilder.h
src/core/: CMakeLists.txt  TechDrawBridge.cpp  TechDrawBridge.h
src/core/FreeCAD/: FreeCADAdapter.cpp  FreeCADAdapter.h  TechDrawBridge.cpp  TechDrawBridge.h
src/core/Modeler/: Assembly.h  Modeler.cpp  Modeler.h  Part.h  ReferenceGeometry.h  Sketch.h  Transform.h
src/core/analysis/: InterferenceChecker.cpp  InterferenceChecker.h
src/core/assembly/: AssemblyManager.cpp  AssemblyManager.h
src/core/crash/: CrashReporter.cpp  CrashReporter.h
src/core/geometry/: OCCTIntegration.cpp  OCCTIntegration.h
src/core/kernel/: CMakeLists.txt  KernelBridge.cpp  KernelBridge.h
src/core/logging/: Logger.cpp  Logger.h
src/core/perf/: PerfSpan.cpp  PerfSpan.h  PerformanceMonitor.cpp  PerformanceMonitor.h
src/core/undo/: Command.h  UndoStack.cpp  UndoStack.h
src/core/updates/: UpdateChecker.cpp  UpdateChecker.h
src/modules/: CMakeLists.txt
src/modules/automation/: AutomationService.cpp  AutomationService.h
src/modules/cam/: CamService.cpp  CamService.h
src/modules/collaboration/: CollaborationService.cpp  CollaborationService.h
src/modules/composites/: CompositesService.cpp  CompositesService.h
src/modules/contentcenter/: ContentCenterService.cpp  ContentCenterService.h
src/modules/direct/: DirectEditService.cpp  DirectEditService.h
src/modules/drawings/: AnnotationService.cpp  AnnotationService.h  AssociativeLinkService.cpp  AssociativeLinkService.h  BomService.cpp  BomService.h  DrawingService.cpp  DrawingService.h  TechDrawAdapter.cpp  TechDrawAdapter.h
src/modules/electronics/: ElectronicsService.cpp  ElectronicsService.h
src/modules/frame/: FrameService.cpp  FrameService.h
src/modules/freeform/: FreeformService.cpp  FreeformService.h
src/modules/generative/: GenerativeService.cpp  GenerativeService.h
src/modules/harness/: HarnessService.cpp  HarnessService.h
src/modules/mbd/: MbdService.cpp  MbdService.h  PmiData.h
src/modules/patterns/: PatternService.cpp  PatternService.h
src/modules/plastics/: PlasticsService.cpp  PlasticsService.h
src/modules/reuse/: ReuseLibraryService.cpp  ReuseLibraryService.h
src/modules/routing/: RoutingService.cpp  RoutingService.h
src/modules/sheetmetal/: SheetMetalService.cpp  SheetMetalService.h
src/modules/simplify/: SimplifyService.cpp  SimplifyService.h
src/modules/simulation/: SimulationService.cpp  SimulationService.h
src/modules/surface/: SurfaceService.cpp  SurfaceService.h
src/modules/topology/: TopologyOptimizationService.cpp  TopologyOptimizationService.h
src/modules/udf/: UdfService.cpp  UdfService.h
src/modules/vault/: VaultService.cpp  VaultService.h
src/modules/visualization/: VisualizationService.cpp  VisualizationService.h
src/modules/welding/: WeldingService.cpp  WeldingService.h
src/ui/: BrowserTree.cpp  BrowserTree.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  MainWindow.cpp  MainWindow.h  PropertyPanel.cpp  PropertyPanel.h  RibbonLayout.cpp  RibbonLayout.h
src/ui/qt/: QtAIChatPanel.cpp  QtAIChatPanel.h  QtAISettingsDialog.cpp  QtAISettingsDialog.h  QtAgentConsole.cpp  QtAgentConsole.h  QtAgentThoughts.cpp  QtAgentThoughts.h  QtBrowserTree.cpp  QtBrowserTree.h  QtCommandLine.cpp  QtCommandLine.h  QtCommunityPanel.cpp  QtCommunityPanel.h  QtLicenseDialog.cpp  QtLicenseDialog.h  QtLogPanel.cpp  QtLogPanel.h  QtLoginDialog.cpp  QtLoginDialog.h  QtMainWindow.cpp  QtMainWindow.h  QtMateDialog.cpp  QtMateDialog.h  QtPerformancePanel.cpp  QtPerformancePanel.h  QtPrintersDialog.cpp  QtPrintersDialog.h  QtPropertyPanel.cpp  QtPropertyPanel.h  QtRegisterDialog.cpp  QtRegisterDialog.h  QtRibbon.cpp  QtRibbon.h  QtUpdateDialog.cpp  QtUpdateDialog.h  QtViewCubeWidget.cpp  QtViewCubeWidget.h  QtViewport.cpp  QtViewport.h  (+2 more)
src/ui/styles/: InventorLight.qss  InventorModern.qss  Styles.qrc
src/ui/theme/: DockLayoutManager.cpp  DockLayoutManager.h  ThemeManager.cpp  ThemeManager.h
tests/: CMakeLists.txt
tests/app/: UpdateServiceTest.cpp
tests/core/: CrashReporterExtendedTest.cpp  CrashReporterTest.cpp  ModelerTest.cpp  UndoStackExtendedTest.cpp  UpdateCheckerTest.cpp
tests/integration/: EndToEndTest.cpp  FreeCADIntegrationTest.cpp  ImportExportIntegrationTest.cpp  ViewportIntegrationTest.cpp
tests/kernel/: EigenKernelTest.cpp
tests/modules/: DirectEditServiceTest.cpp  MbdServiceExtendedTest.cpp  MbdServiceTest.cpp  PatternServiceExtendedTest.cpp  PatternServiceTest.cpp  RoutingServiceTest.cpp  SheetMetalServiceTest.cpp  SimplifyServiceExtendedTest.cpp  SimplifyServiceTest.cpp  VisualizationServiceExtendedTest.cpp  VisualizationServiceTest.cpp
tests/smoke/: SmokeTest.cpp
(+208 files in other folders)
