add_library(cad_modules
    drawings/DrawingService.cpp
    drawings/TechDrawAdapter.cpp
    drawings/BomService.cpp
    drawings/AnnotationService.cpp
    drawings/AssociativeLinkService.cpp
    sheetmetal/SheetMetalService.cpp
    simulation/SimulationService.cpp
    patterns/PatternService.cpp
    direct/DirectEditService.cpp
    routing/RoutingService.cpp
    visualization/VisualizationService.cpp
    mbd/MbdService.cpp
    simplify/SimplifyService.cpp
    welding/WeldingService.cpp
    frame/FrameService.cpp
    harness/HarnessService.cpp
    surface/SurfaceService.cpp
    freeform/FreeformService.cpp
    cam/CamService.cpp
    vault/VaultService.cpp
    automation/AutomationService.cpp
    generative/GenerativeService.cpp
    electronics/ElectronicsService.cpp
    udf/UdfService.cpp
    collaboration/CollaborationService.cpp
    plastics/PlasticsService.cpp
    composites/CompositesService.cpp
    reuse/ReuseLibraryService.cpp
    contentcenter/ContentCenterService.cpp
    topology/TopologyOptimizationService.cpp
)

target_include_directories(cad_modules
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_SOURCE_DIR}/src
)
